--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+/* .App {
   text-align: center;
+} */
+body {
+  margin: 20px 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.job {
+  font-size: 1.2em;
+  background-color: #e6eefa;
+  margin: 0 auto;
+  width: 80%; 
+  padding: 20px 12px;
+  margin: 20px 0;
   display: flex;
-  flex-direction: column;
+  /* display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 150px; */
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.job:hover {
+  cursor: pointer;
+  color: #666666;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.detail-logo {
+  height: 33px;
+  float: right;
+}
+
+.job-company {
+  padding: 0 30px;
+}
+
+.job-dialog {
+  padding: 30px 30px;
 }
